# clumio-terraform-mcp

./: .gitignore  README.md  complete_backup_solution.tf  example_prompts.md  pyproject.toml
src/clumio_terraform_mcp/: app.py  client.py  constants.py  models.py  utils.py
src/clumio_terraform_mcp/templates/: aws_connection.tf.j2  organizational_unit.tf.j2  policy.tf.j2  policy_rule.tf.j2  protection_group.tf.j2  provider.tf.j2  report_configuration.tf.j2  user.tf.j2
test/: test_app.py  test_client.py
