[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clumio-terraform-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for the Clumio Terraform Provider"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.2",
    "jinja2",
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
